[package]
name = "nigant"
version = "0.1.0"
authors = ["Sujith Jay Nair <sujith@sujithjay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.12"
tui = "0.8.0"
reqwest = "0.10.4"
error-chain = "0.12.2"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
termion = "1"
http = "0.2.1"
cacache = "6.0.0"
anyhow = "1.0.28"
bincode = "1.2.1"
