[package]
name = "nigant"
version = "0.4.1"
authors = ["Sujith Jay Nair <sujith@sujithjay.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A Thesaurus for the Terminal"
repository = "https://github.com/twinair/nigant"
readme = "README.md"
keywords = ["thesaurus", "vocabulary"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3.12"
tui = "0.8.0"
reqwest = "0.10.4"
error-chain = "0.12.2"
tokio = { version = "0.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
termion = "1"
http = "0.2.1"
cacache = "6.0.0"
anyhow = "1.0.28"
bincode = "1.2.1"
config = "0.9"

[[bin]]
bench = false
path = "src/main.rs"
name = "nigant"

